# piSafe

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  LOCAL_SETUP_GUIDE.md  README.md  app.py  background_scanner.py  database.py  network_utils.py  pyproject.toml  replit.md
active_scan/: __init__.py  cve_lookup.py  deep_scan.py  risk_analyzer.py  scanner.py
attached_assets/: Pasted--Phase-2-Goal-Develop-the-Active-Scanning-Reporting-module-with-selectable-1--1762174086533_1762174086534.txt  project summary_1762174041300
reporting/: __init__.py  export_report.py
static/: style.css
templates/: base.html  home.html  reports.html  scan_detail.html  scan_status.html  topology.html
